# Axon_SDK_for_PhysicalAI

./: .gitignore  CMakeLists.txt  README.ko.md  README.md  RESUME.md
DesignFiles/: data-centric-zero-copy-design-20260510.md  detailed_design_doc.md  diagrams.md  gemini-code-1778342991663.py
benchmarks/: README.md  bench_axon.py  bench_common.py  bench_dczc.py  bench_ros2.py  compare.py
benchmarks/mock/: README.md  mock_axon.py  mock_common.py  mock_compare.py  mock_dczc.py  mock_ros2.py
docs/: hardware-verification.md  metadata-backends.md  positioning.md  usage.md
docs/adr/: 0001-data-centric-zero-copy-over-dds.md  0002-fd-sidecar-scm-rights.md  0003-metadata-backend-pluggable.md  0004-latest-value-rt-consumer.md  README.md
docs/assets/: make_charts.py
examples/: CMakeLists.txt
examples/accelerator_pool/: CMakeLists.txt  accelerator_pool_demo.cpp
examples/demo/: CMakeLists.txt  README.md  axon_demo.cpp  dczc_demo.cpp
examples/depth_filter/: CMakeLists.txt  depth_filter_demo.cpp
examples/nvenc_flywheel/: README.ko.md  README.md  frame_producer.py  nvenc_recorder.py  run_demo.sh
examples/spike_poc/: CMakeLists.txt  README.md  consumer.c  producer.c
examples/vla_demo/: README.md  llm_consumer.py  run_demo.sh  vision_producer.py
include/axon/: pool.h  publisher.h  rt.h  subscriber.h  tensor_descriptor.h  types.h
include/axon/detail/: accelerator.h  descriptor_util.h  metadata_channel.h  sidecar.h
include/dczc/: pool.h  publisher.h  rt.h  subscriber.h  tensor_descriptor.h  types.h
include/dczc/detail/: descriptor_util.h  metadata_channel.h  sidecar.h
instrumentation/: README.md  run_bounded.sh
instrumentation/ebpf/: copy_trace.bt  run_copy_compare.sh
instrumentation/gpu/: build.sh  gpu_sidecar_demo.cu  vlm_handoff_bench.cu
instrumentation/perf/: run_membw.sh  run_pagefaults.sh  run_syscalls.sh
integrations/ros1_offload/: Dockerfile  README.md  demo.sh  demo_transport.sh  run.sh
integrations/ros1_offload/catkin_ws/src/axon_ros1/: CMakeLists.txt  axon_transport_plugins.xml  package.xml
integrations/ros1_offload/catkin_ws/src/axon_ros1/include/axon_ros1/: axon_bridge.h
integrations/ros1_offload/catkin_ws/src/axon_ros1/msg/: AxonImage.msg  TensorDescriptor.msg
integrations/ros1_offload/catkin_ws/src/axon_ros1/src/: axon_image_publisher.cpp  axon_image_subscriber.cpp  consumer_node.cpp  image_pub_node.cpp  image_sub_node.cpp  producer_node.cpp
integrations/ros1_offload/catkin_ws/src/dczc_ros1/: CMakeLists.txt  package.xml
integrations/ros1_offload/catkin_ws/src/dczc_ros1/msg/: TensorDescriptor.msg
integrations/ros1_offload/catkin_ws/src/dczc_ros1/src/: consumer_node.cpp  producer_node.cpp
integrations/ros2_offload/: README.ko.md  README.md  run_demo.sh
integrations/ros2_offload/ros2_ws/: .gitignore
integrations/ros2_offload/ros2_ws/src/axon_ros2/: CMakeLists.txt  package.xml
integrations/ros2_offload/ros2_ws/src/axon_ros2/include/axon_ros2/: axon_bridge.h
integrations/ros2_offload/ros2_ws/src/axon_ros2/msg/: TensorDescriptor.msg
integrations/ros2_offload/ros2_ws/src/axon_ros2/src/: consumer_node.cpp  producer_node.cpp
python/: CMakeLists.txt  README.md  axon_py.cpp  dczc_py.cpp
python/tests/: test_axon.py  test_dczc.py  test_device_array.py  test_device_consumer.py
src/: accelerator_cuda.cpp  metadata_channel.cpp  metadata_channel_iox2.cpp  pool.cpp  publisher.cpp  rt.cpp  sidecar.cpp  subscriber.cpp
tests/: CMakeLists.txt  axon_test.h  dczc_test.h  test_accel_e2e.cpp  test_descriptor.cpp  test_end_to_end.cpp  test_pool.cpp  test_rt.cpp  test_seqlock.cpp  test_sidecar.cpp
